--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -24,5 +24,5 @@ jobs:
       run: |
         cd ./python
         echo "${{ secrets.DOCKERPW }}" | docker login -u "adamszymczak" --password-stdin
-        docker image build -t adamszymczak/gitops:hellov1.0 .
-        docker push adamszymczak/gitops:hellov1.0
+        docker image build -t adamszymczak/release_gating:hellov1.0 .
+        docker push adamszymczak/release_gating:hellov1.0
